# mcpstrike

./: .gitignore  README.md  pyproject.toml  start.sh
src/mcpstrike/: __init__.py  config.py  launcher.py
src/mcpstrike/backend/: __init__.py  app.py
src/mcpstrike/client/: __init__.py  ollama_bridge.py  tui.py  wrapper.py
src/mcpstrike/client/prompts/: __init__.py  generator.py
src/mcpstrike/client/prompts/templates/: autonomous.txt  guided.txt
src/mcpstrike/common/: __init__.py  filenames.py  formatters.py  parsers.py
src/mcpstrike/server/: app.py  wrapper.py
