[project]
name = "mcpstrike"
version = "3.0.0"
description = "MCP server + Ollama-driven autonomous pentest client for HexStrike backends."
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "mcpstrike" }]

dependencies = [
    "fastmcp>=0.2.0",
    "httpx>=0.27.0",
    "aiofiles>=23.2.1",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "rich>=13.7",
    "prompt_toolkit>=3.0.43",
]

[project.optional-dependencies]
backend = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.scripts]
mcpstrike-server  = "mcpstrike.server.app:main"
mcpstrike-client  = "mcpstrike.client.tui:main"
mcpstrike-prompt  = "mcpstrike.client.prompts.generator:main"
mcpstrike-backend = "mcpstrike.backend.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcpstrike"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
